contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/storage/fail/invalid_storage_type_param.stderr
error: custom attribute panicked
 --> tests/ui/storage/fail/invalid_storage_type_param.rs:7:1
  |
7 | #[common_macros::storage]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: failed to parse storage type for #[persistent(...)] : expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
